--- a/.github/workflows/register-environment.yml
+++ b/.github/workflows/register-environment.yml
@@ -1,7 +1,7 @@
 name: register-environment
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       environment_file:
         required: true
